2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/boot.h (boot_lock_bits_set): Fix a typo: BLB11 needs
	to be programmed (rather than BLB12) in order to prevent the
	application from overwriting the boot loader section.
	Closes bug #18115: online documentation typo/bug avr/boot.h

2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdio.h: Document that malloc() is no longer needed for
	floating-point conversions as it once used to be.
	Closes bug #18688: vfscanf and vfprintf don't use malloc

2007-01-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix broken seeding of the PRNGs when seeding with 0.
	This fix is courtesy Andrew Chernov from the FreeBSD
	project (rev. 1.21 of their random.c).
	* libc/stdlib/random.c (do_random): seed with another (arbitrary) value
	when attempting to seed with 0.
	* libc/stdlib/rand.c (do_rand): (Ditto.)
	Closes bug #18662: rand() keeps returning the same value if seeded with 0

For older changes see ChangeLog-2006